substituidos os arquivos referencias.bib e trabalho-academico.md

--- a/referencias.bib
+++ b/referencias.bib
@@ -1,344 +1,537 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% Este arquivo deve ser salvo com a codificação UTF-8,
+%% Veja como configurar o Jabref para utilização com o abnTeX2: 
+%% https://github.com/abntex/abntex2/wiki/JabRef
 
 
-%% Created for Lauro Cesar Araujo at 2015-04-27 19:43:45 -0300 
+@book{weber,
+  Address = {São Paulo},
+  Author = {Max Weber},
+  Publisher = {Cultrix},
+  Title = {Ciência e Política: duas vocações},
+  url = {http://geografialinks.com/site/wp-content/uploads/2010/03/Max_Weber_-_Cincia_e_Poltica.pdf},
+  urlaccessdate = {19 mai. 2017},
+  Year = {1997}
+}
 
+@Book{moraes,
+  address = {São Paulo},
+  author = {Alexandre de Moraes},
+  edition = {32},
+  publisher = {Atlas},
+  title = {Direito Constitucional},
+  year = {2016}
+}
 
-%% Saved with string encoding Unicode (UTF-8) 
+@hidden{guetzevitch,
+  Author = {Mirkine Guetzévitch},
+  Title = {As novas tendências do direito constitucional},
+  Year = {1933}
+}
 
+@hidden{barile,
+  address = {Bolonha},
+  author = {Paolo Barile},
+  publisher = {Il Molino},
+  title = {Diritti dell'uomo e libertà fondamentali},
+  year = {1985}
+}
 
+@hidden{baracho,
+  author = {José Alfredo de Oliveira Baracho},
+  title = {O princípio de subsidariedade: conceito e evolução},
+  journal = {Cadernos de direito constitucinal e ciência política},
+  volume = {19}
+}
 
-@book{ibge1993,
-	Address = {Rio de Janeiro},
-	Author = {IBGE},
+@hidden{moreira,
+  author = {Vital Moreira},
+  title = {Economia e constituição},
+  year = {1974}
+}
+
+@misc{dudh,
+  address = {Palais de Chaillot, Paris},
+  month = {10 dez.},
+  organization = {Nacões Unidas},
+  org-short = {ONU},
+  title = {Declaração Universal dos Direitos Humanos},
+  url = {https://nacoesunidas.org/direitoshumanos/declaracao/},
+  urlaccessdate = {23 mai. 2017},
+  year = {1948}
+}
+
+@book{cf88,
+  address = {Brasília, DF},
+  organization = {Brasil},
+  month = {5 out.},
+  publisher = {Senado},
+  title = {Constituição da República Federativa do Brasil},
+  type = {Constituição (1988)},
+  url = {http://www.planalto.gov.br/ccivil_03/constituicao/constituicaocompilado.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1988}
+}
+
+@article{ec40,
+  address = {Brasília},
+  month = {29 mai.},
+  organization = {Brasil},
+  title = {Constituição (1988). Emenda constitucional nº 40, de 29 de maio de 2003.
+    Altera o inciso V do art. 163 e o art. 192 da Constituição Federal, e o caput do
+    art. 52 do Ato das Disposições Constitucionais Transitórias.},
+  url = {http://www.planalto.gov.br/ccivil_03/constituicao/Emendas/Emc/emc40.htm#art2}, 
+  urlaccessdate = {23 mai. 2017},
+  year={2003}
+}
+
+@Misc{drummond,
+  author        = {Arnaldo Fortes Drummond},
+  title         = {Liberdade e economia na filosofia do direito de Hegel},
+  url           = {http://www.fafich.ufmg.br/~leonarva/GT%20HEGEL_arquivos/Textosparavotar_arquivos/Arnaldo.pdf},
+  urlaccessdate = {19 mai. 2017},
+}
+
+@book{rossetti,
+  Address = {São Paulo},
+  Author = {José Paschoal Rossetti},
+  Edition = {20},
+  Publisher = {Atlas},
+  Title = {Introdução à Economia},
+  Year = {2014}
+}
+
+@misc{religiao,
+  author = {Wikipedia},
+  title = {Ciência da religião --- {W}ikipedia{,} The Free Encyclopedia},
+  url = {https://pt.wikipedia.org/wiki/Ci%C3%AAncia_da_religi%C3%A3o},
+  urlaccessdate = {19 mai. 2017},
+  year = {2017}
+}
+
+@misc{historia,
+  author = {Wikipedia},
+  title = {História --- {W}ikipedia{,} The Free Encyclopedia},
+  url = {https://pt.wikipedia.org/wiki/Hist%C3%B3ria},
+  urlaccessdate = {19 mai. 2017},
+  year = {2017}
+}
+
+@book{passosnogami,
+  address = {São Paulo},
+  author = {Carlos Roberto Martins Passos and Otto Nogami},
+  edition = {6},
+  publisher = {Cengage Learning},
+  title = {Princípios de Economia},  
+  year = {2012}
+}
+
+@book{zizek,
+  Address = {Rio de Janeiro},
+  Author = {Slavoj Zizek},
+  Title = {Um mapa da ideologia},
+  Publisher = {Contraponto},
+  Url = {http://petdireito.ufsc.br/wp-content/uploads/2014/06/link.pdf},
+  Urlaccessdate = {20 mai. 2017},
+  Year = {1996}
+}
+
+@book{singer,
+	Address = {São Paulo},
+	Author = {Paul Singer},
 	Date-Added = {2013-08-21 13:56:10 +0000},
 	Date-Modified = {2013-08-21 13:56:10 +0000},
-	Edition = {3},
-	Organization = {http://biblioteca.ibge.gov.br/visualizacao/livros/liv23907.pdf},
-	Publisher = {Centro de Documenta{\c c}{\~a}o e Dissemina{\c c}{\~a}o de Informa{\c c}{\~o}es. Funda{\c c}{\~a}o Intituto Brasileiro de Geografia e Estat{\'\i}stica},
-	Title = {Normas de apresenta{\c c}{\~a}o tabular},
-	Urlaccessdate = {21 ago 2013},
-	Year = {1993}}
+	Edition = {6},
+	Organization = {https://www.passeidireto.com/arquivo/19292334/o-que-e-economia---paul-singer},
+	Publisher = {Contexto},
+	Title = {O que é economia},
+	Urlaccessdate = {12 abr 2017},
+	Year = {2005}
+}
 
-@misc{abntex2-wiki-como-customizar,
-	Author = {Lauro C{\'e}sar Araujo},
-	Date-Added = {2013-03-23 21:39:21 +0000},
-	Date-Modified = {2015-04-27 22:43:06 +0000},
-	Howpublished = {Wiki do abnTeX2},
-	Keywords = {wiki},
-	Title = {Como customizar o abnTeX2},
-	Url = {https://github.com/abntex/abntex2/wiki/ComoCustomizar},
-	Urlaccessdate = {27 abr 2015},
-	Year = {2015},
-	Bdsk-Url-1 = {https://github.com/abntex/abntex2/wiki/ComoCustomizar}}
 
-@manual{talbot2012,
-	Author = {Nicola L.C. Talbot},
-	Date-Added = {2013-03-11 12:06:04 +0000},
-	Date-Modified = {2013-03-11 12:06:56 +0000},
-	Month = {Nov.},
-	Title = {User Manual for glossaries.sty},
-	Url = {http://mirrors.ctan.org/macros/latex/contrib/glossaries/glossaries-user.pdf},
-	Urlaccessdate = {11 mar. 2013},
-	Year = {2012},
-	Bdsk-Url-1 = {http://mirrors.ctan.org/macros/latex/contrib/glossaries/glossaries-user.pdf}}
+@inbook{rangel1956,
+	address = {Rio de Janeiro},
+	author = {Ignácio Rangel},
+	booktitle = {Ignácio Rangel},
+	booksubtitle = {Obras Reunidas},
+	edition = {3},
+	organization = {César Benjamin},
+	pages = {203-283},
+	publisher = {Contraponto},
+	title = {Desenvolvimento e Projeto},
+	volume = {1},
+	year = {2012}
+}
 
-@manual{babel,
-	Author = {Johannes Braams},
-	Date-Added = {2013-02-17 13:37:14 +0000},
-	Date-Modified = {2013-02-17 13:38:38 +0000},
-	Month = {Apr.},
-	Title = {Babel, a multilingual package for use with LATEX's standard document classes},
-	Url = {http://mirrors.ctan.org/info/babel/babel.pdf},
-	Urlaccessdate = {17 fev. 2013},
-	Year = {2008},
-	Bdsk-Url-1 = {http://mirrors.ctan.org/info/babel/babel.pdf}}
+@inbook{rangel1960,
+	address = {Rio de Janeiro},
+	author = {Ignácio Rangel},
+	booktitle = {Ignácio Rangel},
+	booksubtitle = {Obras Reunidas},
+	edition = {3},
+	organization = {César Benjamin},
+	pages = {185-188},
+	publisher = {Contraponto},
+	title = {Inflação e Desenvolvimento},
+	volume = {2},
+	year = {2012}
+}
 
-@manual{abntex2modelo-artigo,
-	Annote = {Este documento {\'e} derivado do \cite{abnt-bibtex-doc}},
-	Author = {Lauro C{\'e}sar Araujo},
-	Date-Added = {2013-01-15 00:10:35 +0000},
-	Date-Modified = {2015-04-27 22:43:13 +0000},
-	Organization = {Equipe abnTeX2},
-	Title = {Modelo Can{\^o}nico de Artigo Cient{\'\i}fico com abnTeX2},
-	Url = {http://www.abntex.net.br/},
-	Year = {2015},
-	Bdsk-Url-1 = {http://www.abntex.net.br/}}
+@inbook{rangel1961,
+	address = {Rio de Janeiro},
+	author = {Ignácio Rangel},
+	booktitle = {Ignácio Rangel},
+	booksubtitle = {Obras Reunidas},
+	edition = {3},
+	organization = {César Benjamin},
+	pages = {228-230},
+	publisher = {Contraponto},
+	title = {O papel da inflação},
+	volume = {2},
+	year = {2012}
+}
 
-@manual{abntex2modelo-relatorio,
-	Annote = {Este documento {\'e} derivado do \cite{abnt-bibtex-doc}},
-	Author = {Lauro C{\'e}sar Araujo},
-	Date-Added = {2013-01-15 00:05:34 +0000},
-	Date-Modified = {2015-04-27 22:43:18 +0000},
-	Organization = {Equipe abnTeX2},
-	Title = {Modelo Can{\^o}nico de Relat{\'o}rio T{\'e}cnico e/ou Cient{\'\i}fico com abnTeX2},
-	Url = {http://www.abntex.net.br/},
-	Year = {2015},
-	Bdsk-Url-1 = {http://www.abntex.net.br/}}
+@inbook{rangel1983,
+	address = {Rio de Janeiro},
+	author = {Ignácio Rangel},
+	booktitle = {Ignácio Rangel},
+	booksubtitle = {Obras Reunidas},
+	edition = {3},
+	organization = {César Benjamin},
+	pages = {411-412},
+	publisher = {Contraponto},
+	title = {Desindexação},
+	volume = {2},
+	year = {2012}
+}
+	
+@inbook{rangel1985a,
+  address = {Rio de Janeiro},
+  author = {Ignácio Rangel},
+	booktitle = {Ignácio Rangel},
+	booksubtitle = {Obras Reunidas},
+	edition = {3},
+	organization = {César Benjamin},
+	pages = {464-466},
+	publisher = {Contraponto},
+	title = {A inflação e os juros},
+	volume = {2},
+	year = {2012}
+}
+	
+@inbook{rangel1985b,
+  address = {Rio de Janeiro},
+  author = {Ignácio Rangel},
+	booktitle = {Ignácio Rangel},
+	booksubtitle = {Obras Reunidas},
+	edition = {3},
+	organization = {César Benjamin},
+	pages = {466-469},
+	publisher = {Contraponto},
+	title = {A lei e o juro},
+	volume = {2},
+	year = {2012}
+}
 
-@manual{abntex2modelo,
-	Annote = {Este documento {\'e} derivado do \cite{abnt-bibtex-doc}},
-	Author = {Lauro C{\'e}sar Araujo},
-	Date-Added = {2013-01-12 22:55:32 +0000},
-	Date-Modified = {2015-04-27 22:43:32 +0000},
-	Organization = {Equipe abnTeX2},
-	Title = {Modelo Can{\^o}nico de Trabalho Acad{\^e}mico com abnTeX2},
-	Url = {http://www.abntex.net.br/},
-	Year = {2015},
-	Bdsk-Url-1 = {http://www.abntex.net.br/}}
+@inbook{rangel1987,
+  address = {Rio de Janeiro},
+  author = {Ignácio Rangel},
+	booktitle = {Ignácio Rangel},
+	booksubtitle = {Obras Reunidas},
+	edition = {3},
+	organization = {César Benjamin},
+	pages = {712-725},
+	publisher = {Contraponto},
+	title = {O papel dos serviços de utilidade pública},
+	volume = {2},
+	year = {2012}
+}
 
-@mastersthesis{araujo2012,
-	Address = {Bras{\'\i}lia},
-	Author = {Lauro C{\'e}sar Araujo},
-	Date-Added = {2013-01-09 11:04:42 +0000},
-	Date-Modified = {2013-01-09 11:04:42 +0000},
-	Month = {mar.},
-	School = {Universidade de Bras{\'\i}lia},
-	Subtitle = {uma perspectiva de {A}rquitetura da {I}nforma{\c c}{\~a}o da {E}scola de {B}ras{\'\i}lia},
-	Title = {Configura{\c c}{\~a}o},
-	Year = {2012}}
-
-@manual{memoir,
-	Address = {Normandy Park, WA},
-	Author = {Peter Wilson and Lars Madsen},
-	Date-Added = {2013-01-09 10:37:50 +0000},
-	Date-Modified = {2013-03-21 13:23:25 +0000},
-	Organization = {The Herries Press},
-	Title = {The Memoir Class for Configurable Typesetting - User Guide},
-	Url = {http://mirrors.ctan.org/macros/latex/contrib/memoir/memman.pdf},
-	Urlaccessdate = {19 dez. 2012},
-	Year = {2010},
-	Bdsk-Url-1 = {http://ctan.tche.br/macros/latex/contrib/memoir/memman.pdf}}
-
-@manual{abntex2cite-alf,
-	Annote = {Este documento {\'e} derivado do \cite{abnt-bibtex-alf-doc}},
-	Author = {Lauro C{\'e}sar Araujo},
-	Date-Added = {2013-01-09 10:37:45 +0000},
-	Date-Modified = {2015-04-27 22:43:44 +0000},
-	Organization = {Equipe abnTeX2},
-	Title = {O pacote abntex2cite: t{\'o}picos espec{\'\i}ficos da ABNT NBR 10520:2002 e o estilo bibliogr{\'a}fico alfab{\'e}tico (sistema autor-data)},
-	Url = {http://www.abntex.net.br/},
-	Year = {2015},
-	Bdsk-Url-1 = {http://www.abntex.net.br/}}
-
-@manual{abntex2cite,
-	Annote = {Este documento {\'e} derivado do \cite{abnt-bibtex-doc}},
-	Author = {Lauro C{\'e}sar Araujo},
-	Date-Added = {2013-01-09 10:37:45 +0000},
-	Date-Modified = {2015-04-27 22:43:38 +0000},
-	Organization = {Equipe abnTeX2},
-	Title = {O pacote abntex2cite: Estilos bibliogr{\'a}ficos compat{\'\i}veis com a ABNT NBR 6023},
-	Url = {http://www.abntex.net.br/},
-	Year = {2015},
-	Bdsk-Url-1 = {http://www.abntex.net.br/}}
-
-@manual{abntex2classe,
-	Author = {Lauro C{\'e}sar Araujo},
-	Date-Added = {2013-01-09 10:37:38 +0000},
-	Date-Modified = {2015-04-27 22:42:47 +0000},
-	Organization = {Equipe abnTeX2},
-	Title = {A classe abntex2: Modelo can{\^o}nico de trabalhos acad{\^e}micos brasileiros compat{\'\i}vel com as normas ABNT NBR 14724:2011, ABNT NBR 6024:2012 e outras},
-	Url = {http://www.abntex.net.br/},
-	Year = {2015},
-	Bdsk-Url-1 = {http://www.abntex.net.br/}}
-
-@manual{NBR10520:2002,
+@book{fortuna2015,
 	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 21:43:38 +0000},
-	Date-Modified = {2013-01-12 22:17:20 +0000},
-	Month = {ago.},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 7,
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Apresenta{\c c}\~ao de cita{\c c}\~oes em documentos},
-	Title = {{NBR} 10520},
-	Year = 2002}
+	Author = {Eduardo Fortuna},
+	Edition = {20},
+	Publisher = {Qualitymark},
+	Title = {Mercado Financeiro},
+	subtitle = {Produtos e Serviços},
+	Year = {2015}
+}
 
-@manual{NBR6024:2012,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 21:24:06 +0000},
-	Date-Modified = {2012-12-15 21:24:28 +0000},
-	Month = {fev.},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 4,
-	Subtitle = {Numera{\c c}\~ao progressiva das se{\c c}\~oes de um documento},
-	Title = {{NBR} 6024},
-	Year = 2012}
+@book{beatrizselan,
+  Address = {Rio de Janeiro},
+  Author = {Beatriz Selan},
+  Publisher = {SESES},
+  Title = {Mercado Financeiro},
+  url = {https://www.passeidireto.com/disciplina/mercado-financeiro?arquivo=25937863},
+  urlaccessdate = {19 mai. 2017},
+  Year = {2014}
+}
 
-@manual{NBR6028:2003,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 21:02:12 +0000},
-	Date-Modified = {2012-12-15 21:02:50 +0000},
-	Month = {nov.},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 2,
-	Subtitle = {Resumo - Apresenta{\c c}{\~a}o},
-	Title = {{NBR} 6028},
-	Year = 2003}
+@article{brasil1964a,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {16 jul.},
+  organization = {Brasil},
+  title = {Lei nº 4.357, de 16 de julho de 1964. Autoriza a emissão de Obrigações
+    do Tesouro Nacional, altera a legislação do impôsto sôbre a renda, e dá outras
+    providências.},
+  url = {http://www.planalto.gov.br/ccivil_03/leis/L4357.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1964}
+}
 
-@manual{NBR14724:2001,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 20:34:08 +0000},
-	Date-Modified = {2012-12-15 20:34:08 +0000},
-	Month = {jul.},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 6,
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao},
-	Title = {{NBR} 14724},
-	Year = 2001}
+@article{brasil1964b,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {21 ago.},
+  organization = {Brasil},
+  title = {Lei nº 4.380, de 21 de agosto de 1964. Institui a correção monetária nos
+  contratos imobiliários de interêsse social, o sistema financeiro para aquisição
+  da casa própria, cria o Banco Nacional da Habitação (BNH), e Sociedades de Crédito
+  Imobiliário, as Letras Imobiliárias, o Serviço Federal de Habitação e Urbanismo
+  e dá outras providências.},
+  url = {http://www.planalto.gov.br/ccivil_03/leis/L4380.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1964}
+}
 
-@manual{NBR14724:2002,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 20:34:17 +0000},
-	Date-Modified = {2012-12-15 20:34:17 +0000},
-	Month = {ago.},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 6,
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao},
-	Title = {{NBR} 14724},
-	Year = 2002}
+@article{brasil1964c,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {31 dez.},
+  organization = {Brasil},
+  title = {Lei nº 4.595, de 31 de dezembro de 1964. Dispõe sobre a Política
+  e as Instituições Monetárias, Bancárias e Creditícias, Cria o Conselho
+  Monetário Nacional e dá outras providências.},
+  url = {http://www.planalto.gov.br/ccivil_03/leis/L4595.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1964}
+}
 
-@manual{NBR14724:2005,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 20:34:08 +0000},
-	Date-Modified = {2012-12-15 20:35:25 +0000},
-	Month = {dez.},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 9,
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao},
-	Title = {{NBR} 14724},
-	Year = 2005}
+@article{brasil1965,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {14 jul.},
+  organization = {Brasil},
+  title = {Lei nº 4.728, de 14 de julho de 1965. Disciplina o mercado de
+  capitais e estabelece medidas para o seu desenvolvimento.},
+  url = {http://www.planalto.gov.br/ccivil_03/leis/L4728.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1965}
+}
 
-@manual{NBR14724:2011,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 20:34:08 +0000},
-	Date-Modified = {2012-12-15 20:35:25 +0000},
-	Month = {mar.},
-	Note = {Substitui a Ref.~\citeonline{NBR14724:2005}},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 15,
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao},
-	Title = {{NBR} 14724},
-	Year = 2011}
+@article{brasil1976a,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {07 dez.},
+  organization = {Brasil},
+  title = {Lei nº 6.385, de 07 de dezembro de 1976. Dispõe sobre o mercado
+  de valores mobiliários e cria a Comissão de Valores Mobiliários.},
+  url = {http://www.planalto.gov.br/ccivil_03/leis/L6385.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1976}
+}
 
-@article{van86,
-	Author = {{van}, Gigch, John P. and Leo L. Pipino},
-	Journal = {Future Computing Systems},
-	Number = {1},
-	Pages = {71-97},
-	Title = {In search for a paradigm for the discipline of information systems},
-	Volume = {1},
-	Year = {1986}}
+@article{brasil1976b,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {15 dez.},
+  organization = {Brasil},
+  title = {Lei nº 6.404, de 15 de dezembro de 1976. Dispõe sobre
+  as Sociedades por Ações.},
+  url = {http://www.planalto.gov.br/ccivil_03/leis/L6404compilada.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1976}
+}
 
-@phdthesis{guizzardi2005,
-	Address = {Enschede, The Netherlands},
-	Author = {Giancarlo Guizzardi},
-	Date-Added = {2012-04-23 11:35:28 +0000},
-	Date-Modified = {2012-04-23 11:35:28 +0000},
-	School = {Centre for Telematics and Information Technology, University of Twente},
-	Title = {Ontological Foundations for Structural Conceptual Models},
-	Url = {http://www.loa.istc.cnr.it/Guizzardi/SELMAS-CR.pdf},
-	Urlaccessdate = {3 jul. 2011},
-	Year = {2005},
-	Bdsk-Url-1 = {http://www.loa.istc.cnr.it/Guizzardi/SELMAS-CR.pdf}}
+@article{brasil1986,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {21 nov.},
+  organization = {Brasil},
+  title = {Decreto-Lei nº 2.291, de 21 de novembro de 2002. Extingue o Banco
+  Nacional da Habitação - BNH, e dá outras Providências.},
+  url = {http://www.planalto.gov.br/ccivil_03/decreto-lei/del2291.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1986}
+}
 
-@mastersthesis{macedo2005,
-	Author = {Fl{\'a}via L. Macedo},
-	Date-Added = {2012-04-23 11:35:13 +0000},
-	Date-Modified = {2012-04-23 11:35:13 +0000},
-	Keywords = {arquitetura da informa{\c c}{\~a}o},
-	School = {Universidade de Bras{\'\i}lia},
-	Title = {Arquitetura da Informa{\c c}{\~a}o: aspectos espistemol{\'o}gicos, cient{\'\i}ficos e pr{\'a}ticos.},
-	Type = {Disserta{\c c}{\~a}o de Mestrado},
-	Year = {2005}}
+@article{brasil1994,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {30 jun.},
+  organization = {Brasil},
+  title = {Medida Provisória nº 542, de 30 de junho de 1994. Dispõe sobre o Plano Real,
+  o Sistema Monetário Nacional, estabelece as regras e condições de emissão do REAL e os
+  critérios para conversão das obrigações para o Real, e dá outras providências.},
+  url = {http://www2.camara.leg.br/legin/fed/medpro/1994/medidaprovisoria-542-30-junho-1994-375071-norma-pe.html},
+  urlaccessdate = {23 mai. 2017},
+  year = {1994}
+}
 
-@manual{EIA649B,
-	Address = {EUA},
-	Date-Added = {2012-04-23 11:34:59 +0000},
-	Date-Modified = {2012-04-23 11:34:59 +0000},
-	Keywords = {norma},
-	Month = {June},
-	Organization = {TechAmerica},
-	Title = {ANSI/EIA 649-B: Configuration Management Standard},
-	Year = {2011}}
+@article{brasil1995,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {29 jun.},
+  organization = {Brasil},
+  title = {Lei nº 9.069, de 29 de junho de 1995. Dispõe sobre o Plano Real,
+  o Sistema Monetário Nacional, estabelece as regras e condições de emissão do REAL e os
+  critérios para conversão das obrigações para o Real, e dá outras providências.},
+  url = {http://www2.camara.leg.br/legin/fed/lei/1995/lei-9069-29-junho-1995-372117-normaatualizada-pl.html},
+  urlaccessdate = {23 mai. 2017},
+  year = {1995}
+}
 
-@inproceedings{masolo2010,
-	Author = {Claudio Masolo},
-	Booktitle = {Proceedings of the Twelfth International Conference on the Principles of Knowledge Representation and Reasoning (KR 2010)},
-	Date-Added = {2012-04-23 11:34:38 +0000},
-	Date-Modified = {2012-04-23 11:34:38 +0000},
-	Editor = {Lin, F. and Sattler, U.},
-	Pages = {258-268},
-	Publisher = {AAAI Press},
-	Title = {Understanding Ontological Levels},
-	Url = {http://wiki.loa-cnr.it/Papers/kr10v0.7.pdf},
-	Urlaccessdate = {2 jan. 2012},
-	Year = {2010},
-	Bdsk-Url-1 = {http://wiki.loa-cnr.it/Papers/kr10v0.7.pdf}}
+@article{brasil1999,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {11 jun.},
+  organization = {Brasil},
+  title = {Decreto nº 3.088, de 21 de junho de 1999. Estabelece a sistemática
+  de "metas para a inflação" como diretriz para fixação do regime de política
+  monetária e dá outras providências.},
+  url = {http://www.planalto.gov.br/ccivil_03/decreto/D3088.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {1999}
+}
 
-@inbook{guarino1995,
-	Address = {Vienna},
-	Author = {Nicola Guarino},
-	Booktitle = {Philosophy and the Cognitive Science},
-	Date-Added = {2012-04-23 11:34:29 +0000},
-	Date-Modified = {2012-04-23 11:34:29 +0000},
-	Editor = {R. Casati and B. Smith and G. White},
-	Month = {Sept.},
-	Pages = {443-456},
-	Publisher = {Holder-Pivhler-Tempsky},
-	Title = {The Ontological Level},
-	Url = {http://wiki.loa-cnr.it/Papers/OntLev.pdf},
-	Urlaccessdate = {2 jan. 2012},
-	Year = {1995},
-	Bdsk-Url-1 = {http://wiki.loa-cnr.it/Papers/OntLev.pdf}}
+@article{brasil2001a,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {31 out.},
+  organization = {Brasil},
+  title = {Lei nº 10.303, de 31 de outubro de 2001. Altera e acrescenta
+  dispositivos na Lei no 6.404, de 15 de dezembro de 1976, que dispõe
+  sobre as Sociedades por Ações, e na Lei no 6.385, de 7 de dezembro
+  de 1976, que dispõe sobre o mercado de valores mobiliários e cria
+  a Comissão de Valores Mobiliários.},
+  url = {http://www.planalto.gov.br/ccivil_03/leis/LEIS_2001/L10303.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {2001}
+}
 
-@incollection{bates2010,
-	Address = {New York},
-	Author = {Marcia J. Bates},
-	Booktitle = {Encyclopedia of Library and Information Sciences},
-	Date-Added = {2012-04-23 11:34:29 +0000},
-	Date-Modified = {2012-04-23 11:34:29 +0000},
-	Edition = {3rd},
-	Editor = {Marcia J. Bates and Mary Niles Maack},
-	Pages = {2347-2360},
-	Publisher = {CRC Press},
-	Title = {Information},
-	Url = {http://pages.gseis.ucla.edu/faculty/bates/articles/information.html},
-	Urlaccessdate = {24 out. 2011},
-	Volume = {3},
-	Year = {2010},
-	Bdsk-Url-1 = {http://pages.gseis.ucla.edu/faculty/bates/articles/information.html}}
+@article{brasil2001b,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {31 out.},
+  organization = {Brasil},
+  title = {Decreto nº 3.995, de 31 de outubro de 2001. Altera e acresce
+  dispositivos à Lei no 6.385, de 7 de dezembro de 1976, que dispõe sobre
+  o mercado de valores mobiliários, nas matérias reservadas a decreto.},
+  url = {http://www.planalto.gov.br/ccivil_03/decreto/2001/D3995.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {2001}
+}
 
-@book{doxiadis1965,
-	Author = {Constantinos A. Doxiadis},
-	Date-Added = {2012-04-23 11:34:20 +0000},
-	Date-Modified = {2012-04-23 11:34:20 +0000},
-	Publisher = {Ceira - Coimbra},
-	Title = {Arquitetura em Transi{\c c}{\~a}o},
-	Year = {1965}}
+@article{brasil2002,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {26 fev.},
+  organization = {Brasil},
+  title = {Lei nº 10.411, de 26 de fevereiro de 2002. Altera e acresce
+  dispositivos à Lei no 6.385, de 7 de dezembro de 1976, que dispõe sobre
+  o mercado de valores mobiliários e cria a Comissão de Valores Mobiliários.},
+  url = {http://www.planalto.gov.br/ccivil_03/LEIS/2002/L10411.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {2002}
+}
 
-@book{dewey1980,
-	Address = {New York, NY, USA},
-	Author = {John Dewey},
-	Date-Added = {2012-04-23 11:34:16 +0000},
-	Date-Modified = {2012-04-23 11:34:16 +0000},
-	Publisher = {Perigee Books},
-	Title = {Art as Experience},
-	Year = {1980}}
+@article{brasil2011,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {08 dez.},
+  organization = {Brasil},
+  title = {Lei nº 12.543, de 08 de dezembro de 2011. Autoriza o Conselho Monetário
+  Nacional, para fins de política monetária e cambial, a estabelecer condições
+  específicas para negociação de contratos derivativos; altera os arts. 2º e 3º da
+  Lei no 6.385, de 7 de dezembro de 1976, o inciso IV do art. 3º do Decreto-Lei nº
+  1.783, de 18 de abril de 1980, os arts. 1º, 2º e 3º da Lei nº 8.894, de 21 de
+  junho de 1994, e a Lei nº 10.931, de 2 de agosto de 2004; e dá outras providências.},
+  url = {http://www.planalto.gov.br/ccivil_03/_Ato2011-2014/2011/Lei/L12543.htm},
+  urlaccessdate = {23 mai. 2017},
+  year = {2011}
+}
 
-@misc{limarka,
-	Author = {Eduardo de Santana Medeiros Alexandre},
-	Date-Added = {Seg Set  5 14:30:25 BRT 2016},
-	Date-Modified = {2016-09-05},
-	Howpublished = {Página do projeto},
-	Title = {Limarka},
-	Url = {https://github.com/abntex/limarka},
-	Urlaccessdate = {5 de set 2016},
-	Year = {2016}}
+@book{blanchard,
+	Address = {São Paulo},
+	Author = {Olivier Blanchard},
+	furtherresp = {Tradução de Cláudia Martins e Mônica Rosemberg. Revisão Técnica: Eliezer Martns Diniz},
+	Edition = {4},
+	Publisher = {Pearson Prentice Hall},
+	Title = {Macroeconomia},
+	Year = {2007}
+}
+
+@misc{inflationtargeting,
+  author = {Wikipedia},
+  title = {Inflation Targeting --- {W}ikipedia{,} The Free Encyclopedia},
+  subtitle = {Estimando diferentes formas de Curva de Phillips},
+  url = {https://en.wikipedia.org/wiki/Inflation_targeting},
+  urlaccessdate = {25 mai. 2017},
+  year = {2017}
+}
+
+@Misc{reuters,
+  author        = {Jonathan Spicer},
+  title         = {In historic shift, Fed sets inflation target},
+  year          = {2012},
+  publisher     = {reuters},
+  url           = {http://www.reuters.com/article/us-usa-fed-inflation-target-idUSTRE80O25C20120126},
+  urlaccessdate = {25 mai. 2017},
+}
+
+@Misc{fed1,
+  title         = {Overview of the Federal Reserve System},
+  address       = {Washington, EUA},
+  organization  = {Federal Reserve},
+  url           = {https://www.federalreserve.gov/aboutthefed/files/pf_1.pdf},
+  urlaccessdate = {23 mai. 2017},
+}
+
+@Misc{fed2,
+  title         = {The Three Key System Entities},
+  address       = {Washington, EUA},
+  organization  = {Federal Reserve},
+  url           = {https://www.federalreserve.gov/aboutthefed/files/pf_2.pdf},
+  urlaccessdate = {23 mai. 2017},
+}
+
+@article{publaw95-188,
+  address = {Washington, DC},
+  journal = {U.S. Code},
+  month = {16 nov.},
+  organization = {{United States Congress}},
+  org-short = {US Congress},
+  section = {Title 12},
+  title = {Public Law 95-188},
+  url = {http://uscode.house.gov/statviewer.htm?volume=91&page=1387},
+  urlaccessdate = {23 mai. 2017},
+  year = {1977},
+}
+
+@article{bcb2002,
+  address = {Brasília, DF},
+  journal = {Diário Oficial da República Federativa do Brasil},
+  month = {28 nov.},
+  organization = {{Banco Central do Brasil}},
+  title = {Resolução nº 3.040, de 28 de novembro de 2002. Dispõe sobre
+  os requisitos e procedimentos para a constituição, a autorização para 
+  funcionamento, a transferência de controle societário e a reorganização
+  societária, bem como para o cancelamento da autorização para funcionamento
+  das instituições que especifica.},
+  url = {http://www.bcb.gov.br/pre/normativos/res/2002/pdf/res_3040_v4_L.pdf},
+  urlaccessdate = {23 mai. 2017},
+  year = {2002}
+}
+
+@hidden{brito2005,
+	author = {XXX Brito},
+	title = {XXX},
+	year = {2005}
+}
+
+@hidden{canotilho,
+	author = {J. J. Gomes Canotilho and Vital Moreira},
+	title = {Fundamentos da Constituição},
+	year = {1987}
+}
